kubernetes/grafana/components/openshift/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
  annotations:
    externaldns.k8s.io: unifi
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: https-gateway
      namespace: openshift-ingress

    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: listeners
      namespace: openshift-ingress
  hostnames: ["grafana.arthurvardevanyan.com"]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grafana
          namespace: grafana
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
