kubernetes/grafana/components/openshift/egress-firewall.yaml
---
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: grafana
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    - type: Allow
      to:
        dnsName: truenas.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: minio.microshift.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: s3.unas.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: router-apps.app.okd.homelab.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: thanos-querier-openshift-monitoring.apps.okd.homelab.arthurvardevanyan.com
    - type: Allow
      to:
        dnsName: grafana.com
    - type: Allow
      to:
        dnsName: storage.googleapis.com
    # Google Cloud IPv4 ranges (storage.googleapis.com)
    - type: Allow
      to:
        cidrSelector: 8.8.4.0/24
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 8.8.8.0/24
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 8.34.208.0/20
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 8.35.192.0/20
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 8.228.0.0/14
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 8.232.0.0/14
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 8.236.0.0/15
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 23.236.48.0/20
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 23.251.128.0/19
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.0.0.0/15
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.2.0.0/16
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.3.0.0/23
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.3.3.0/24
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.3.4.0/24
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.3.8.0/21
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.3.16.0/20
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.3.32.0/19
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.3.64.0/18
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.4.0.0/14
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.8.0.0/13
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.16.0.0/12
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.32.0.0/11
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.64.0.0/10
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 34.128.0.0/10
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 35.184.0.0/13
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 35.192.0.0/14
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 35.196.0.0/15
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 35.198.0.0/16
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 35.199.0.0/17
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 35.199.128.0/18
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 35.200.0.0/13
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 35.208.0.0/12
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 35.224.0.0/12
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 35.240.0.0/13
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 35.252.0.0/14
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 64.15.112.0/20
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 64.233.160.0/19
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 66.102.0.0/20
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 66.249.64.0/19
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 70.32.128.0/19
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 72.14.192.0/18
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 74.114.24.0/21
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 74.125.0.0/16
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 104.154.0.0/15
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 104.196.0.0/14
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 104.237.160.0/19
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 107.167.160.0/19
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 107.178.192.0/18
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 108.59.80.0/20
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 108.170.192.0/18
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 108.177.0.0/17
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 130.211.0.0/16
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.22.2.0/23
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.22.4.0/23
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.22.8.0/22
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.22.160.0/20
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.22.176.0/21
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.22.184.0/23
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.22.186.0/24
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.23.48.0/20
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.23.64.0/18
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.64.0.0/11
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.107.0.0/16
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.108.0.0/14
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.112.0.0/13
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.120.0.0/22
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 136.124.0.0/15
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 142.250.0.0/15
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 146.148.0.0/17
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 162.120.128.0/17
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 162.216.148.0/22
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 162.222.176.0/21
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 172.110.32.0/21
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 172.217.0.0/16
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 172.253.0.0/16
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 173.194.0.0/16
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 173.255.112.0/20
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 192.104.160.0/23
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 192.158.28.0/22
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 192.178.0.0/15
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 193.186.4.0/24
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 199.36.154.0/23
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 199.36.156.0/24
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 199.192.112.0/22
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 199.223.232.0/21
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 207.175.0.0/16
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 207.223.160.0/20
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 208.65.152.0/22
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 208.68.108.0/22
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 208.81.188.0/22
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 208.117.224.0/19
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 209.85.128.0/17
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 216.58.192.0/19
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 216.73.80.0/20
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 216.239.32.0/19
      ports:
        - protocol: TCP
          port: 443
    - type: Allow
      to:
        cidrSelector: 216.252.220.0/22
      ports:
        - protocol: TCP
          port: 443
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
